MAPREDUCE-7456. Added JDK17 extra args to container localizers
Change-Id: Ifd84ff77096ce1bf139170ec02686ca81d230430